# patchwork

./: CMakeLists.txt  LICENSE  README.md
resources/: patchwork.qrc
resources/patchwork/images/: pwdial-skin.knob  pwslider-skin.knob
resources/patchwork/style/: pwboxitem.css  pwboxtitle.css
sources/: patchwork.h
sources/patchwork/: pwarea.cc  pwarea.h  pwareascene.cc  pwareascene.h  pwareascene_gvlayout.cc  pwboxitem.cc  pwboxitem.h  pwboxtitle.cc  pwboxtitle.h  pwconnector.cc  pwconnector.h  pwendpoint.cc  pwendpoint.h  pwnode.cc  pwnode.h
sources/patchwork/private/qutil/: qutil.cc  qutil.h  qutil.tcc
sources/patchwork/widgets/: pwdial.cc  pwdial.h  pwslider.cc  pwslider.h
tests/: demo.cc
